--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 \documentclass[12pt]{article}
 \usepackage[export]{adjustbox}
 \usepackage{amsfonts, amsmath, amssymb}
-\usepackage[english, spanish]{babel}
+\usepackage[english, spanish, es-nodecimaldot]{babel}
 \usepackage{bm}
 \usepackage{breqn}
 \usepackage{enumitem}
@@ -152,6 +152,7 @@
 \newcommand*{\e}{\mathrm{e}} % exponential
 \newcommand*{\observer}{\mathcal{O}}
 \newcommand*{\primeobserver}{\mathcal{O}^{\prime}}
+\newcommand*{\inlinesol}{\vspace*{10pt}\textbf{Solución}\vspace*{10pt}}
 
 
 %%%%%%%%%%%%%%%%%%Portada y configuración%%%%%%%%%%%%%%%%%%
@@ -196,16 +197,69 @@
             
             \begin{enumerate}[label = \arabic*.]
                 \item Energía \(E = \SI{5}{\joule}\) (este es particularmente interesante, aquí hay implícito otro cambio total de paradigma).
+                
+                \inlinesol
+
+                Sabemos que en las unidades naturales \(c = 1\). Entonces,
+
+                \begin{align*}
+                    E &= \SI{5}{\joule} = \dfrac{\SI[per-mode = power]{5}{\kilogram\metre\squared\per\second\squared}}{1^{2}},\\
+                    &= \dfrac{\SI[per-mode = power]{5}{\kilogram\metre\squared\per\second\squared}}{\SI[per-mode = power]{9e16}{\metre\squared\per\second\squared}},\\
+                    \Aboxed{E &= \SI{5.56e-17}{\kilogram}}
+                \end{align*}
+
                 \item Momento \(p = \SI[per-mode = power]{3e4}{\kilogram \metre \per\second}\) (compara con tu resultado anterior, qué curioso).
+                
+                \inlinesol
+                
+                \begin{align*}
+                    p &= \dfrac{\SI[per-mode = power]{3e4}{\kilogram \metre \per\second}}{1},\\
+                    &= \dfrac{\SI[per-mode = power]{3e4}{\kilogram \metre \per\second}}{\SI[per-mode = power]{3e8}{\metre\per\second}},\\
+                    \Aboxed{p &= \SI{e-4}{\kilogram}}
+                \end{align*}
+
                 \item Densidad de masa \(\rho = \SI[per-mode = power]{10}{\kilogram \per \cubic\metre}\)
+                
+                \inlinesol 
+                
+                Puesto que que la densidad ya está expresada en términos de \si{\kilogram} y \si{\metre}, no es necesario transformar la cantidad a unidades naturales. Por lo tanto,
+
+                \begin{equation*}
+                    \boxed{\rho = \SI[per-mode = power]{10}{\kilogram \per \cubic\metre}}
+                \end{equation*}
             \end{enumerate}
 
             \item Transforma las siguientes cantidades de unidades naturales al SI.
             
             \begin{enumerate}[label = \arabic*.]
                 \item Velocidad \(v = \num{e-2}\) (siempre hablaremos de velocidades entre 0 y 1, así que es importante imaginarse cuál es la magnitud de estas en unidades más humanas).
+                
+                \inlinesol
+
+                \begin{align*}
+                    v &= \num{e-2} \cdot 1 = \num{e-2}(\SI[per-mode = power]{3e8}{\metre\per\second}),\\
+                    \Aboxed{v &= \SI{3e6}{\metre\per\second}}
+                \end{align*}
+
                 \item Presión \(P = \SI[per-mode = power]{e19}{\kilogram \per \cubic\metre}\)
+                
+                \inlinesol
+
+                \begin{align*}
+                    P &= \SI[per-mode = power]{e19}{\kilogram \per \cubic\metre} \cdot 1^{2},\\
+                    &= \SI[per-mode = power]{e19}{\kilogram \per \cubic\metre}(\SI[per-mode = power]{9e16}{\metre\squared\per\second\squared}),\\
+                    \Aboxed{P &= \SI{9e35}{\newton\per\metre\squared}}
+                \end{align*}
+
                 \item Densidad de energía \(U = \SI[per-mode = power]{1}{\kilogram \per \cubic\metre}\) (las mismas unidades que la presión, qué raro).
+                
+                \inlinesol
+
+                \begin{align*}
+                    U &= \SI[per-mode = power]{1}{\kilogram \per \cubic\metre} \cdot 1^{2},\\
+                    &= \SI[per-mode = power]{1}{\kilogram \per \cubic\metre} (\SI[per-mode = power]{9e16}{\metre\squared\per\second\squared}),\\
+                    \Aboxed{U &= \SI{9e16}{\joule\per\cubic\metre}}
+                \end{align*}
             \end{enumerate}
 
             \item Dos de las ecuaciones de Maxwell relacionan los campos eléctrico y magnético. En el vacío estas son
