Added images and fixed formatting

--- a/main.tex
+++ b/main.tex
@@ -19,7 +19,7 @@
 \usepackage[hyperref]{ntheorem}
 % \usepackage{phfqit} % Bra-ket notation
 \usepackage{physics}
-\usepackage[inner]{showlabels}
+\usepackage[final]{showlabels}
 \usepackage{siunitx}
 \usepackage{titling}
 \usepackage{tabularray}
@@ -343,7 +343,7 @@
 
             \begin{figure}[htb]
                 \centering
-                \includegraphics[scale = 0.4]{example-image}
+                \includegraphics[scale = 0.15]{fig-1}
                 \caption{Línea de mundo del observador \(\observer\) en términos de del ángulo \(\theta\).}
                 \label{fig:lineamundoO}
             \end{figure}
@@ -375,7 +375,7 @@
 
             \begin{figure}[htb]
                 \centering
-                \includegraphics[scale = 0.4]{example-image}
+                \includegraphics[scale = 0.2]{fig-2}
                 \caption{Diagrama espacio-tiempo de \(\observer\) desde la perspectiva de \(\primeobserver\).}
                 \label{fig:spacetime-Observer}
             \end{figure}
@@ -390,7 +390,7 @@
 
             \begin{figure}[htb]
                 \centering
-                \includegraphics[scale = 0.3]{example-image}
+                \includegraphics[scale = 0.18]{fig-3}
                 \caption{Los eventos \(A\) y \(B\) son simultáneos en el sistema de referencia del observador \(\observer\), pero no lo son en el de \(\primeobserver\).}
                 \label{fig:events-simultainety}
             \end{figure}
@@ -405,11 +405,12 @@
 
             \begin{figure}[htb]
                 \centering
-                \includegraphics[scale = 0.3]{example-image}
+                \includegraphics[scale = 0.18]{fig-4}
                 \caption{Conjunto de todos los eventos que ocurren a \(t = \text{cte}\).}
                 \label{fig:t-cte}
             \end{figure}
 
+            \pagebreak
             \item Si \(v = \num{e-2}\), ¿cuál es el valor de \(\theta\)?
             
             \inlinesol
@@ -441,13 +442,14 @@
 
             \begin{figure}[htb]
                 \centering
-                \includegraphics{example-image}
+                \includegraphics[scale = 0.18]{fig-5}
                 \caption{Proyección de la línea de mundo de \(\primeobserver\) en el plano \(xy\).}
                 \label{eq:Oprime-Planexy}
             \end{figure}
 
-            Notamos entonces que \(t^{\prime}\) se encuentra en el plano \(xy\). Es decir, la línea de mundo del observador \(\primeobserver\) se obtiene cuando \(x = 0\ \wedge\ y = 0\). 
+            Notamos entonces que \(t^{\prime}\) se encuentra en el plano \(xy\). 
 
+            \pagebreak
             \item Pinta el eje \(x^{\prime}\) argumentado con la construcción que hicimos en clase (no es necesario que la repitas paso a paso) y usando el hecho de que los ejes espaciales deben estar alineados según la convención que dimos arriba. ¿En qué plano están contenidos los ejes \(t^{\prime}\) y \(x^{\prime}\)?
             
             \inlinesol
@@ -456,22 +458,24 @@
 
             \begin{figure}[htb]
                 \centering
-                \includegraphics{example-image}
+                \includegraphics[scale = 0.2]{fig-6}
                 \caption{Eje \(x^{\prime}\) proyectado en el plano \(xy\).}
                 \label{fig:Xprime-Planext}
             \end{figure}
 
+            \pagebreak
             Si ahora dibujamos a \(x^{\prime}\) en el plano \(xt\), veríamos lo siguiente:
 
             \begin{figure}[htb]
                 \centering
-                \includegraphics{example-image}
+                \includegraphics[scale = 0.2]{fig-7}
                 \caption{Eje \(x^{\prime}\) proyecto en el plano \(xt\).}
                 \label{fig:Xprime-Planoxt}
             \end{figure}
 
             Además, notemos que \(\theta\) es igual al ángulo que hay entre \(t\) y \(t^{\prime}\), lo cual es análogo al caso que teníamos para el diagrama de espaciotiempo \(1+1\)-dimensional.
 
+            \pagebreak
             \item Dibuja la línea de mundo de un rayo de luz que va desde el eje \(t^{\prime}\) a cierto tiempo \(t^{\prime} = -a\) hasta la parte negativa del eje \(y\). Luego dibuja la línea de mundo de otro rayo de luz que va desde la parte negativa del eje \(y\) a \(t = 0\) y llega al eje \(t^{\prime}\) a \(t^{\prime} = a\). ¿Estas líneas se intersectan? Si la respuesta es afirmativa, eso significa que el evento de la intersección es simultáneo con el origen según \(\primeobserver\).
             
             \inlinesol
@@ -480,13 +484,14 @@
 
             \begin{figure}[htb]
                 \centering
-                \includegraphics{example-image}
+                \includegraphics[scale = 0.2]{fig-8}
                 \caption{Líneas de mundo para un rayo de luz que sale de \(t^{\prime} = -a\) hasta la parte negativa del eje \(y\), y para otro rayo que sale desde la parte negativa del eje \(y\) y llega a \(t^{\prime} = a\).}
                 \label{fig:Lineasmundo-Planoytprime}
             \end{figure}
 
             Las líneas de mundo en la \cref{fig:Lineasmundo-Planoytprime} se intersectan, ya que, como vimos previamente en clase, las líneas de mundo de rayos de luz se van a intersectar al eje \(y\) en \(y = -a\).
 
+            \pagebreak
             \item Usa tu resultado de c) para dibujar el eje \(y^{\prime}\) usando el hecho de que los ejes espaciales deben estar alineados según la convención que dimos arriba (pintar la proyección del plano \(x^{\prime}y^{\prime}\) sobre el plano \(xy\) puede serte útil para entender mejor esto).
             
             \inlinesol
@@ -495,11 +500,12 @@
 
             \begin{figure}[htb]
                 \centering
-                \includegraphics{example-image}
+                \includegraphics[scale = 0.2]{fig-9}
                 \caption{La intersección de las líneas de mundo de dos rayos de luz da como resultado el eje \(y^{\prime}\).}
                 \label{fig:Yprimeaxis}
             \end{figure}
 
+            \pagebreak
             \item Dado que estamos en \(2 + 1\) dimensiones, una ecuación del tipo \(t^{\prime} = \textnormal{cte}\) describe a un plano, así que ahora tenemos planos de simultaneidad. Pinta un plano de simultaneidad de \(\primeobserver\) (que no sea el \(x^{\prime}y^{\prime}\)).
             
             \inlinesol
@@ -508,18 +514,11 @@
 
             \begin{figure}[htb]
                 \centering
-                \includegraphics{example-image}
-                \caption{Plano de simultaneidad \(y^{\prime}t^{\prime}\).}
+                \includegraphics[scale = 0.2]{fig-10}
+                \caption{Plano de simultaneidad \(y^{\prime}t^{\prime}\). La zona sombreada representa el plano de simultaneidad elegido.}
                 \label{fig:simultainetyPlaneyprimetprime}
             \end{figure}
         \end{enumerate}
         Esto ya no es parte del ejercicio, pero puede serte útil que pintes (o imagines, el dibujo ciertamente es complicado por la perspectiva) el cómo cambiarían tus respuestas anteriores si la velocidad de \(\primeobserver\) respecto a \(\observer\) fuera \(\va*{v} = v(\cos\phi\uvec{x} + \sin\phi\uvec{y})\).
     \end{exercise}
-
-    \begin{figure}[htb]
-        \centering
-        \includegraphics{example-image}
-        \caption{Diagrama de espaciotiempo \(2+1\)-dimensional.}
-        \label{fig:3D-EspacioTiempo}
-    \end{figure}
 \end{document}
