Fixing worldline expression in Problem 1.a

--- a/main.tex
+++ b/main.tex
@@ -357,10 +357,10 @@
             Entonces, la inclinación de ésta es \(\tan\theta = -v\), por lo que se la ecuación de la línea de mundo queda como:
             
             \begin{empheq}[box=\color{pinkwave}\fbox]{equation*}
-                x = -\tan(\theta) t
+                x = \theta \cdot t
             \end{empheq}
 
-            Y, además se tiene que \(\theta\) es
+            Donde \(\theta\) es
 
             \begin{equation}
                 \theta = -\arctan(v)
